--- a/mergcall.html
+++ b/mergcall.html
@@ -944,28 +944,24 @@
                             <div class="cta-card shadow-md">
                                 <h2 class="mt-2">Start Your Free Trial and
                                     Experience the Mergeasy Advantage</h2>
-                                <div class="hero-text w-100">
-                                    <div
-                                        class="d-flex align-items-center flex-sm-row flex-column justify-content-center mt-4">
-                                        <div class="hero-btn">
-                                            <!-- <a href="" class="btn-primary animated-button">Start Free Trial</a> -->
-                                            <a href="contact.php"
-                                                class="animated-button1">
-                                                <span></span>
-                                                <span></span>
-                                                <span></span>
-                                                <span></span>
-                                                Start Free Trial
-                                            </a>
-                                        </div>
-                                        <div class="hero-btn">
-                                            <a
-                                                href="https://mergeasy.docs.apiary.io/"
-                                                class="secondry-button">Explore
-                                                API Features</a>
+                                    <div class="hero-text w-100">
+                                        <div
+                                            class="d-flex align-items-center flex-sm-row flex-column justify-content-center mt-4">
+                                            <div class="hero-btn" data-aos="zoom-in" data-aos-duration="1000">
+                                                <!-- <a href="" class="btn-primary animated-button">Start Free Trial</a> -->
+                                                <a href="contact.php" class="animated-button1">
+                                                    <span></span>
+                                                    <span></span>
+                                                    <span></span>
+                                                    <span></span>
+                                                    Start Free Trial
+                                                </a>
+                                            </div>
+                                            <div class="hero-btn" data-aos="zoom-in" data-aos-duration="1500">
+                                                <a href="" class="secondry-button">Explore API Features</a>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
                             </div>
                         </div>
                     </div>
