--- a/blog-and-demos.html
+++ b/blog-and-demos.html
@@ -509,7 +509,7 @@
                             <div class="hero-text w-100">
                                 <div
                                     class="d-flex align-items-center flex-sm-row flex-column justify-content-center mt-4">
-                                    <div class="hero-btn">
+                                    <div class="hero-btn" data-aos="zoom-in" data-aos-duration="1000">
                                         <!-- <a href="" class="btn-primary animated-button">Start Free Trial</a> -->
                                         <a href="contact.php" class="animated-button1">
                                             <span></span>
@@ -519,9 +519,8 @@
                                             Start Free Trial
                                         </a>
                                     </div>
-                                    <div class="hero-btn">
-                                        <a href="https://mergeasy.docs.apiary.io/" class="secondry-button">Explore API
-                                            Features</a>
+                                    <div class="hero-btn" data-aos="zoom-in" data-aos-duration="1500">
+                                        <a href="" class="secondry-button">Explore API Features</a>
                                     </div>
                                 </div>
                             </div>
