--- a/plan&pricing.html
+++ b/plan&pricing.html
@@ -570,7 +570,7 @@
                             <div class="hero-text w-100">
                                 <div
                                     class="d-flex align-items-center flex-sm-row flex-column justify-content-center mt-4">
-                                    <div class="hero-btn">
+                                    <div class="hero-btn" data-aos="zoom-in" data-aos-duration="1000">
                                         <!-- <a href="" class="btn-primary animated-button">Start Free Trial</a> -->
                                         <a href="contact.php" class="animated-button1">
                                             <span></span>
@@ -580,7 +580,7 @@
                                             Start Free Trial
                                         </a>
                                     </div>
-                                    <div class="hero-btn">
+                                    <div class="hero-btn" data-aos="zoom-in" data-aos-duration="1500">
                                         <a href="" class="secondry-button">Explore API Features</a>
                                     </div>
                                 </div>
