--- a/competitors.html
+++ b/competitors.html
@@ -257,9 +257,11 @@
                 <div class="row align-items-center">
                     <div class="col-xl-10 col-lg-12  hero-text mx-auto text-center">
                         <span class="title">Unique Selling Proposition</span>
-                        <h2 class="services-title">
-                            Mergeasy vs. Competitors
-                        </h2>
+                        <div class="overflow-hidden">
+                            <h2 class="services-title" data-aos="fade-up" data-aos-duration="1000">
+                                Mergeasy vs. Competitors
+                            </h2>
+                        </div>
                         <p class="hero-text pe-lg-3 mt-2 mb-0 pb-0">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, magni nostrum laudantium reprehenderit eaque dolorum. Facilis quos a earum qui totam eum, voluptates illum voluptate repellendus ab dolores quod aut porro consequatur laborum laboriosam assumenda nisi saepe veritatis consequuntur. Facere.
                         </p>
@@ -269,7 +271,7 @@
                 </div>
             </div>
         </section>
-  <section class="py-5" id="comparison">
+  <section class="py-5" id="comparison" data-aos="zoom-in" data-aos-duration="1000">
             <div class="container">
                 <div class="row">
                     <!-- <div class="col-lg-12 ">
