--- a/demo-details.html
+++ b/demo-details.html
@@ -256,9 +256,11 @@
             <div class="container">
                 <div class="row align-items-center mb-lg-5 mb-4">
                     <div class="col-xl-12 col-lg-12  hero-text mx-auto text-center">
-                        <h2 class="services-title">
-                            Introduction to Mergeasy
-                        </h2>
+                        <div class="overflow-hidden">
+                            <h2 class="services-title" data-aos="fade-up" data-aos-duration="1000">
+                                Introduction to Mergeasy
+                            </h2>
+                        </div>
                         <p class="hero-text pe-lg-3 mt-2 mb-0 pb-0 mb-3">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, modi nobis. E
                             </p>
