--- a/faq.html
+++ b/faq.html
@@ -257,9 +257,11 @@
                 <div class="row align-items-center">
                     <div class="col-xl-10 col-lg-12  hero-text mx-auto text-center">
                         <span class="title">Frequently Asked Questions </span>
-                        <h2 class="services-title">
-                            Mergeasy FAQs
-                        </h2>
+                        <div class="overflow-hidden">
+                            <h2 class="services-title" data-aos="fade-up" data-aos-duration="1000">
+                                Mergeasy FAQs
+                            </h2>
+                        </div>
                         <p class="hero-text pe-lg-3 mt-2 mb-0 pb-0">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, magni nostrum laudantium
                             reprehenderit eaque dolorum. Facilis quos a earum qui totam eum, voluptates illum voluptate
@@ -283,7 +285,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <div class="faq-list">
+                        <div class="faq-list" data-aos="fade-up" data-aos-duration="1000">
                             <ul>
                                 <li class="border-bottom rounded-0">
                                     <i class="fa fa-question-circle icon-help" aria-hidden="true"></i>
