--- a/mergeasy.html
+++ b/mergeasy.html
@@ -258,12 +258,16 @@
                 <div class="row align-items-center">
                     <div class="col-xl-6 col-lg-7  hero-text text-lg-start text-center">
 
-                        <h2 class="services-title">
+                       <div class="overflow-hidden">
+                        <h2 class="services-title"  data-aos="fade-up" data-aos-duration="1000">
                             Automate and Merge Your Documents
                         </h2>
-                        <h1 class="mb-3 pb-0">
+                       </div>
+                       <div class="overflow-hidden">
+                        <h1 class="mb-3 pb-0" data-aos="fade-up" data-aos-duration="1000">
                             Out of the box Integration and Services!
                         </h1>
+                       </div>
                         <p class="hero-text pe-lg-3 mt-2 mb-0 pb-0">
                             Generating and digital signing of your docx or pdf documents with merged data has become
                             more easier!
@@ -350,7 +354,7 @@
                             class="bg-white shadow-sm px-3 pb-4 pt-5 text-center merg-card position-relative z-1 h-100">
                             <div class="step-number shadow-sm">01</div>
                             <div class="mb-4">
-                                <img src="assets/images/Sign up-amico.png" alt="" class="img-fluid">
+                                <img src="assets/images/Sign up-amico.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h4 class="">Upload a template </h4>
                             <p class="text">
@@ -367,7 +371,7 @@
                             class="bg-white shadow-sm px-3 pb-4 pt-5 text-center merg-card position-relative z-1 h-100">
                             <div class="step-number shadow-sm">02</div>
                             <div class="mb-4">
-                                <img src="assets/images/Signing a contract-bro.svg" alt="" class="img-fluid">
+                                <img src="assets/images/Signing a contract-bro.svg" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h4 class="">Choose deliery </h4>
                             <p class="text">
@@ -386,8 +390,8 @@
                         <div
                             class="bg-white shadow-sm px-3 pb-4 pt-5 text-center merg-card position-relative z-1 h-100">
                             <div class="step-number shadow-sm">03</div>
-                            <div class="mb-4">
-                                <img src="assets/images/Wallet-rafiki.png" alt="" class="img-fluid">
+                            <div class="mb-4" >
+                                <img src="assets/images/Wallet-rafiki.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h4 class="">Merge data
                             </h4>
@@ -426,7 +430,7 @@
                     <div class="col-lg-7 mt-lg-0 mt-3 mx-auto">
                         <div class="app-box-row d-flex justify-content-center">
                             <img src="https://mergeasy.com/dist/images/answer-API.gif" alt="Choose deliery"
-                                class="border  img-fluid">
+                                class="border  img-fluid" data-aos="fade-up" data-aos-duration="1000">
                         </div>
                     </div>
                 </div>
@@ -449,7 +453,7 @@
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/Signing a contract-bro.svg" alt="" class="img-fluid">
+                                <img src="assets/images/Signing a contract-bro.svg" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Save
                                 Your time</h5>
@@ -465,7 +469,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/Online document-rafiki.png" alt="" class="img-fluid">
+                                <img src="assets/images/Online document-rafiki.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Intuitive
                                 Workflow</h5>
@@ -482,7 +486,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/Online document-rafiki.png" alt="" class="img-fluid">
+                                <img src="assets/images/Online document-rafiki.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Low Cost
                                 Services</h5>
@@ -498,7 +502,7 @@
                             <!-- <h3>MergeCall</h3>
                             <h4 class="text-dark">(Integrated Calling)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/Calling-bro.svg" alt="" class="img-fluid">
+                                <img src="assets/images/Calling-bro.svg" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Secure &
                                 Error Free</h5>
@@ -528,7 +532,7 @@
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images//mergeasyFeature/Agreement-rafiki.png" alt="" class="img-fluid">
+                                <img src="assets/images//mergeasyFeature/Agreement-rafiki.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Contract / Agreeements
                             </h5>
@@ -545,7 +549,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/mergeasyFeature/Marketing-bro.png" alt="" class="img-fluid">
+                                <img src="assets/images/mergeasyFeature/Marketing-bro.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Marketing Documents
                             </h5>
@@ -563,7 +567,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/mergeasyFeature/Education-rafiki.png" alt="" class="img-fluid">
+                                <img src="assets/images/mergeasyFeature/Education-rafiki.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Eductional Documents
                             </h5>
@@ -581,7 +585,7 @@
                             <!-- <h3>MergeCall</h3>
                             <h4 class="text-dark">(Integrated Calling)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/mergeasyFeature/Documents-pana.png" alt="" class="img-fluid">
+                                <img src="assets/images/mergeasyFeature/Documents-pana.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Personalized Documents
                             </h5>
@@ -598,7 +602,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/mergeasyFeature/Signing a contract-bro.png" alt="" class="img-fluid">
+                                <img src="assets/images/mergeasyFeature/Signing a contract-bro.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Real Estate Contracts & Rentals
                             </h5>
@@ -617,7 +621,7 @@
                             <!-- <h3>MergeCall</h3>
                             <h4 class="text-dark">(Integrated Calling)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/mergeasyFeature/Invoice-rafiki.png" alt="" class="img-fluid">
+                                <img src="assets/images/mergeasyFeature/Invoice-rafiki.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Invoices & Receipts
                             </h5>
@@ -634,7 +638,7 @@
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/mergeasyFeature/Pricing plans-rafiki.png" alt="" class="img-fluid">
+                                <img src="assets/images/mergeasyFeature/Pricing plans-rafiki.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Proposals & Quotes
                             </h5>
@@ -651,7 +655,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/mergeasyFeature/Online document-bro.png" alt="" class="img-fluid">
+                                <img src="assets/images/mergeasyFeature/Online document-bro.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>HR Documents
                             </h5>
@@ -668,7 +672,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/mergeasyFeature/Sales consulting-rafiki.png" alt="" class="img-fluid">
+                                <img src="assets/images/mergeasyFeature/Sales consulting-rafiki.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Purchase & Sales Orders
                             </h5>
@@ -776,7 +780,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 mx-auto d-lg-block d-none">
-                        <img src="assets/images/Questions-pana.png" alt="" class="img-fluid">
+                        <img src="assets/images/Questions-pana.png" alt="" class="img-fluid" data-aos="fade-left" data-aos-duration="1000">
                     </div>
                 </div>
             </div>
