--- a/mobile-application.html
+++ b/mobile-application.html
@@ -256,12 +256,16 @@
                 <div class="row align-items-center">
                     <div class="col-xl-6 col-lg-7  hero-text text-lg-start text-center">
 
-                        <h2 class="services-title">
-                            Because Work Isn't<br> Always at a Desk
-                        </h2>
-                        <h1 class="mb-3 pb-0">
+                        <div class="overflow-hidden">
+                            <h2 class="services-title" data-aos="fade-up" data-aos-duration="1000">
+                                Because Work Isn't<br> Always at a Desk
+                            </h2>
+                        </div>
+                       <div class="overflow-hidden">
+                        <h1 class="mb-3 pb-0" data-aos="fade-up" data-aos-duration="1000">
                             Mobile Application
                         </h1>
+                       </div>
                         <p class="hero-text pe-lg-3 mt-2 mb-0 pb-0">
                             Mergeasy’s free Mobile App gives you instant access to your CRM contacts no matter where you
                             are. Make calls, send texts, and be available on-the-go, all automatically synced to your
@@ -352,7 +356,7 @@
                     <div class="col-lg-3 mb-lg-0 mb-3">
                         <div class=" text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Download-amico.png" alt="" class="img-fluid">
+                                <img src="assets/images/mobile-feature/Download-amico.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Free Download for
                                 iOS + Android</h5>
@@ -361,7 +365,7 @@
                     <div class="col-lg-3 mb-lg-0 mb-3">
                         <div class=" text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Control Panel-rafiki.png" alt="" class="img-fluid">
+                                <img src="assets/images/mobile-feature/Control Panel-rafiki.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Fully Synced with Your CRM</h5>
                         </div>
@@ -369,7 +373,7 @@
                     <div class="col-lg-3 mb-lg-0 mb-3">
                         <div class=" text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Inbox cleanup-pana.png" alt="" class="img-fluid">
+                                <img src="assets/images/mobile-feature/Inbox cleanup-pana.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Access Your Inboxes</h5>
                         </div>
@@ -377,7 +381,7 @@
                     <div class="col-lg-3 mb-lg-0 mb-3">
                         <div class=" text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Calling-bro.png" alt="" class="img-fluid">
+                                <img src="assets/images/mobile-feature/Calling-bro.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Custom Call Statuses</h5>
                         </div>
@@ -385,7 +389,7 @@
                     <div class="col-lg-3 mb-lg-0 mb-3">
                         <div class=" text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Phone customization-amico.png" alt="" class="img-fluid">
+                                <img src="assets/images/mobile-feature/Phone customization-amico.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Recent Calls Synced with Web Dialers</h5>
                         </div>
@@ -393,7 +397,7 @@
                     <div class="col-lg-3 mb-lg-0 mb-3">
                         <div class=" text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Work chat-cuate.png" alt="" class="img-fluid">
+                                <img src="assets/images/mobile-feature/Work chat-cuate.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Customize Inbound Caller Display</h5>
                         </div>
@@ -401,7 +405,7 @@
                     <div class="col-lg-3 mb-lg-0 mb-3">
                         <div class=" text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Switches-bro.png" alt="" class="img-fluid">
+                                <img src="assets/images/mobile-feature/Switches-bro.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Easily Switch Between mergeasy Accounts</h5>
                         </div>
@@ -409,7 +413,7 @@
                     <div class="col-lg-3 mb-lg-0 mb-3">
                         <div class=" text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Online resume-cuate.png" alt="" class="img-fluid">
+                                <img src="assets/images/mobile-feature/Online resume-cuate.png" alt="" class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Set Your Own Availability</h5>
                         </div>
@@ -439,10 +443,10 @@
         <section class="py-5 ">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-6 col-md-6 mx-auto mt-lg-0 mt-3 me-auto">
-                        <div class="app-box-row d-flex justify-content-center">
-                            <img src="assets/images/mobile-app-product-content-img-3@2x-915x654.png.avif"
-                                alt="Choose deliery" class=" img-fluid rounded-3">
+                    <div class="col-lg-6 col-md-6 mx-auto mt-lg-0 mt-3 me-auto overflow-hidden">
+                        <div class="app-box-row d-flex justify-content-center p-3 bg-light  rounded-3 shadow-sm" data-aos="fade-right" data-aos-duration="1000">
+                            <img src="assets/images/mobile application/001c3806-a8b4-41d4-99a6-600ee896f7c5.jpg"
+                                alt="Choose deliery" class=" img-fluid" >
                         </div>
                     </div>
                     <div class="col-lg-5   hero-text  mx-auto mt-lg-0 mt-3 text-lg-start text-center">
@@ -505,10 +509,10 @@
                             <li><i class="bi bi-check text-success me-2"></i>International </li>
                         </ul> -->
                     </div>
-                    <div class="col-lg-6  col-md-6 mx-auto ms-auto order-lg-2 order-1">
-                        <div class="app-box-row d-flex justify-content-center">
-                            <img src="assets/images/mobile-app-product-content-img-2@2x-915x654.png.avif"
-                                alt="Choose deliery" class=" img-fluid rounded-3">
+                    <div class="col-lg-6  col-md-6 mx-auto ms-auto order-lg-2 order-1 overflow-hidden">
+                        <div class="app-box-row d-flex justify-content-center p-3 bg-light  rounded-3 shadow-sm" data-aos="fade-left" data-aos-duration="1000">
+                            <img src="assets/images/mobile application/1e50eb9c-a260-45ac-81b1-150864b8657b.jpg"
+                                alt="Choose deliery" class=" img-fluid" >
                         </div>
                     </div>
 
@@ -520,10 +524,11 @@
         <section class="py-5">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-6 col-md-6 mx-auto me-auto">
-                        <div class="app-box-row d-flex justify-content-center">
-                            <img src="assets/images/mobile-app-product-content-img-3@2x-915x654.png.avif"
-                                alt="Choose deliery" class=" img-fluid rounded-3">
+                    <div class="col-lg-6 col-md-6 mx-auto me-auto overflow-hidden">
+                      
+                        <div class="app-box-row d-flex justify-content-center p-3 bg-light  rounded-3 shadow-sm" data-aos="fade-right" data-aos-duration="1000">
+                            <img src="assets/images/mobile application/61627733-8155-4179-b4d4-a9d481b37828.jpg"
+                                alt="Choose deliery" class=" img-fluid" >
                         </div>
                     </div>
                     <div class="col-lg-5  hero-text  mx-auto text-lg-start text-center mt-lg-0 mt-3">
@@ -652,7 +657,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 mx-auto d-lg-block d-none">
-                        <img src="assets/images/Questions-pana.png" alt="" class="img-fluid">
+                        <img src="assets/images/Questions-pana.png" alt="" class="img-fluid" data-aos="fade-left" data-aos-duration="1000">
                     </div>
                 </div>
             </div>
