--- a/plan&pricing.html
+++ b/plan&pricing.html
@@ -257,9 +257,11 @@
                 <div class="row align-items-center">
                     <div class="col-xl-7 col-lg-10  hero-text mx-auto text-center">
 
-                        <h2 class="services-title">
+                      <div class="overflow-hidden">
+                        <h2 class="services-title"  data-aos="fade-up" data-aos-duration="1000">
                             Plans & Pricing Mergeasy <br> All-In-One System
                         </h2>
+                      </div>
                         <p class="hero-text pe-lg-3 mt-2 mb-0 pb-0">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quae nihil natus sit rerum. Eius, est tenetur. Ut voluptates laudantium nesciunt, eos recusandae laborum accusamus odio, nobis asperiores facere optio.
                         </p>
@@ -445,8 +447,9 @@
         <section class="py-5 ">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-md-6  mx-auto">
-                            <img src="assets/images/salesforce-integration-content-img-4@2x-915x654.png.avif" alt="Choose deliery" class=" img-fluid">
+                    <div class="col-md-6  mx-auto overflow-hidden">
+                            <img src="assets/images/salesforce-integration-content-img-4@2x-915x654.png.avif"
+                             alt="Choose deliery" class=" img-fluid"  data-aos="fade-right" data-aos-duration="1000">
                     </div>
                     <div class="col-lg-5  hero-text  ms-auto mt-lg-0 mt-3 text-lg-start text-center">
                         <span class="title"> Versatile Cloud
@@ -479,8 +482,9 @@
                        
                     </div>
 
-                    <div class="col-md-6 mx-auto order-lg-2 ">
-                            <img src="assets/images/salesforce-integration-content-img-4@2x-915x654.png.avif" alt="Choose deliery" class=" img-fluid">
+                    <div class="col-md-6 mx-auto order-lg-2 overflow-hidden ">
+                            <img src="assets/images/salesforce-integration-content-img-4@2x-915x654.png.avif" data-aos="fade-left" data-aos-duration="1000"
+                            alt="Choose deliery" class=" img-fluid">
                     </div>
                 </div>
             </div>
@@ -488,8 +492,9 @@
         <section class="py-5 ">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-md-6  mx-auto">
-                            <img src="assets/images/salesforce-integration-content-img-4@2x-915x654.png.avif" alt="Choose deliery" class=" img-fluid">
+                    <div class="col-md-6  mx-auto overflow-hidden">
+                            <img src="assets/images/salesforce-integration-content-img-4@2x-915x654.png.avif" 
+                            data-aos="fade-right" data-aos-duration="1000" alt="Choose deliery" class=" img-fluid">
                     </div>
                     <div class="col-lg-5  hero-text  ms-auto mt-lg-0 mt-3  text-lg-start text-center">
                         <span class="title"> Versatile Cloud
