--- a/blog-and-demos.html
+++ b/blog-and-demos.html
@@ -256,7 +256,7 @@
             <div class="container">
                 <div class="row align-items-center mb-lg-5 mb-4">
                     <div class="col-xl-10 col-lg-10  hero-text mx-auto text-center">
-                        <h2 class="services-title">
+                        <h2 class="services-title" data-aos="zoom-in" data-aos-duration="1000">
                             BLOG & DEMOS
                         </h2>
                         <p class="hero-text pe-lg-3 mt-2 mb-0 pb-0">
@@ -265,7 +265,7 @@
                             culpa quam consectetur!
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" data-aos="fade-up" data-aos-duration="1000">
                     <div class="col-lg-4 col-md-6 mb-3">
                         <div class="demo-card shadow">
                             <div class="demo-video-image position-relative">
