--- a/chrome-extension.html
+++ b/chrome-extension.html
@@ -257,12 +257,16 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-6 col-lg-7  hero-text text-lg-start text-center">
-                        <h2 class="services-title">
+                        <div class="overflow-hidden">
+                        <h2 class="services-title " data-aos="fade-up" data-aos-duration="1000">
                             Level Up Your Productivity
                         </h2>
-                        <h1 class="mb-3 pb-0">
-                            Chrome Extension
-                        </h1>
+                    </div>
+                        <div class="overflow-hidden">
+                            <h1 class="mb-3 pb-0" data-aos="fade-up" data-aos-duration="1500">
+                                Chrome Extension
+                            </h1>
+                        </div>
                         <p class="hero-text pe-lg-3 mt-2 mb-0 pb-0">
                             Reduce manual labor, save time, and keep communicating even when you’re on
                             a different browser tab with our free Chrome Extension. Don’t waste time copy and pasting
@@ -355,7 +359,7 @@
                         <div class=" px-3 py-4 text-center merg-card">
                             <div class="my-3">
                                 <img src="assets/images/extension-feature/Google sitemap-rafiki.png" alt=""
-                                    class="img-fluid">
+                                    class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Call from Any Tab</h5>
                         </div>
@@ -363,7 +367,7 @@
                     <div class="col-lg-3 col-md-6 mb-lg-0 mb-3">
                         <div class=" px-3 py-4 text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/extension-feature/Notes-pana.png" alt="" class="img-fluid">
+                                <img src="assets/images/extension-feature/Notes-pana.png" alt="" class="img-fluid"  data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Call Notes in Real Time</h5>
                         </div>
@@ -371,7 +375,7 @@
                     <div class="col-lg-3 col-md-6 mb-lg-0 mb-3">
                         <div class=" px-3 py-4 text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/extension-feature/Calling-amico (1).png" alt=""
+                                <img src="assets/images/extension-feature/Calling-amico (1).png" alt=""  data-aos="zoom-in" data-aos-duration="1000"
                                     class="img-fluid">
                             </div>
                             <h5 class="">See and Return Recent Calls</h5>
@@ -380,7 +384,7 @@
                     <div class="col-lg-3 col-md-6 mb-lg-0 mb-3">
                         <div class=" px-3 py-4 text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/extension-feature/Chat-rafiki.png" alt="" class="img-fluid">
+                                <img src="assets/images/extension-feature/Chat-rafiki.png" alt="" class="img-fluid"  data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Synced to All Dialers</h5>
                         </div>
@@ -388,7 +392,7 @@
                     <div class="col-lg-3 col-md-6 mb-lg-0 mb-3">
                         <div class=" px-3 py-4 text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/extension-feature/Inbox cleanup-amico.png" alt=""
+                                <img src="assets/images/extension-feature/Inbox cleanup-amico.png" alt=""  data-aos="zoom-in" data-aos-duration="1000"
                                     class="img-fluid">
                             </div>
                             <h5 class="">Quick Access to Inbox</h5>
@@ -397,7 +401,7 @@
                     <div class="col-lg-3 col-md-6 mb-lg-0 mb-3">
                         <div class=" px-3 py-4 text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Inbox cleanup-pana.png" alt="" class="img-fluid">
+                                <img src="assets/images/mobile-feature/Inbox cleanup-pana.png" alt="" class="img-fluid"  data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5 class="">Free Download</h5>
                         </div>
@@ -405,7 +409,7 @@
                     <div class="col-lg-3 col-md-6 mb-lg-0 mb-3">
                         <div class=" px-3 py-4 text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Control Panel-rafiki.png" alt=""
+                                <img src="assets/images/mobile-feature/Control Panel-rafiki.png" alt=""  data-aos="zoom-in" data-aos-duration="1000"
                                     class="img-fluid">
                             </div>
                             <h5 class="">Click-to-Call from Most CRMs</h5>
@@ -414,7 +418,7 @@
                     <div class="col-lg-3 col-md-6 mb-lg-0 mb-3">
                         <div class=" px-3 py-4 text-center merg-card">
                             <div class="my-3">
-                                <img src="assets/images/mobile-feature/Online resume-cuate.png" alt=""
+                                <img src="assets/images/mobile-feature/Online resume-cuate.png" alt=""  data-aos="zoom-in" data-aos-duration="1000"
                                     class="img-fluid">
                             </div>
                             <h5 class="">Set Your Own Availability</h5>
@@ -445,10 +449,10 @@
         <section class="pb-5 ">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-md-6 me-lg-auto mx-lg-0 mx-auto ">
-                        <div class="app-box-row d-flex justify-content-center">
-                            <img src="assets/images/chrome-extention-product-content-img-1@2x-915x654.png.avif"
-                                alt="Choose deliery" class=" img-fluid rounded-3">
+                    <div class="col-md-6 me-lg-auto mx-lg-0 mx-auto overflow-hidden">
+                        <div class="app-box-row d-flex justify-content-center bg-light overflow-hidden p-3 rounded-3  shadow-sm" data-aos="fade-right" data-aos-duration="1000">
+                            <img src="assets/images/mergecall extension/1 (1).png"
+                                alt="Choose deliery" class=" img-fluid w-75" >
                         </div>
                     </div>
                     <div class="col-lg-5  mt-lg-0 mt-3  hero-text  mx-auto text-lg-start text-center">
@@ -516,10 +520,11 @@
                             <li><i class="bi bi-check text-success me-2"></i>International </li>
                         </ul> -->
                     </div>
-                    <div class="col-md-6 ms-lg-auto mx-lg-0 mx-auto order-lg-2 order-1">
-                        <div class="app-box-row d-flex justify-content-center">
-                            <img src="assets/images/Chrome-Extension-Image-915x654.png.avif" alt="Choose deliery"
-                                class=" img-fluid rounded-3">
+                    <div class="col-md-6 ms-lg-auto mx-lg-0 mx-auto order-lg-2 order-1 overflow-hidden">
+                        <div class="app-box-row d-flex justify-content-center overflow-hidden p-3 rounded-3 shadow-sm bg-light"  data-aos="fade-left" data-aos-duration="1000">
+                            
+                                <img src="assets/images/mergecall extension/1 (2).png"
+                                alt="Choose deliery" class=" img-fluid  w-100">
                         </div>
                     </div>
 
@@ -531,10 +536,11 @@
         <section class="pb-5">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-md-6 me-lg-auto mx-lg-0 mx-auto">
-                        <div class="app-box-row d-flex justify-content-center">
-                            <img src="assets/images/chrome-extention-product-content-img-3@2x-915x654.png.avif"
-                                alt="Choose deliery" class=" img-fluid rounded-3">
+                    <div class="col-md-6 me-lg-auto mx-lg-0 mx-auto overflow-hidden">
+                        <div class="app-box-row d-flex justify-content-center overflow-hidden p-3 rounded-3 shadow-sm bg-light"  data-aos="fade-right" data-aos-duration="1000">
+                            
+                                <img src="assets/images/mergecall extension/1 (3).png"
+                                alt="Choose deliery" class=" img-fluid ">
                         </div>
                     </div>
                     <div class="col-lg-5  mt-lg-0 mt-3  hero-text  mx-auto text-lg-start text-center">
@@ -663,8 +669,8 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-4 mx-auto d-lg-block d-none">
-                        <img src="assets/images/Questions-pana.png" alt="" class="img-fluid">
+                    <div class="col-lg-4 mx-auto d-lg-block d-none overflow-hidden">
+                        <img src="assets/images/Questions-pana.png" alt="" class="img-fluid" data-aos="fade-left" data-aos-duration="1000">
                     </div>
                 </div>
             </div>
