--- a/mergcall.html
+++ b/mergcall.html
@@ -274,9 +274,11 @@
                 <div class="row align-items-center">
                     <div class="col-xl-6 col-lg-7  hero-text text-lg-start text-center">
 
-                        <h2 class="services-title">
+                       <div class="overflow-hidden">
+                        <h2 class="services-title" data-aos="fade-up" data-aos-duration="1000">
                             The Smartest Phone <br class="d-lg-block d-none"> & Sales Dialer.
                         </h2>
+                       </div>
                         <h1 class="mb-3 pb-0">
                             Best Value For Money.
                         </h1>
@@ -358,9 +360,9 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-4 mx-auto">
-                        <div class="app-box-row d-flex justify-content-center">
+                        <div class="app-box-row d-flex justify-content-center overflow-hidden" >
                             <img src="assets/images/Calling-amico.png" alt="Choose deliery" class=" img-fluid"
-                                style="max-width: 270px;">
+                                style="max-width: 270px;" data-aos="fade-right" data-aos-duration="1000">
                         </div>
                     </div>
                     <div class="col-lg-6  hero-text  mx-auto  mt-lg-0 mt-3">
@@ -410,7 +412,7 @@
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Calling-rafiki.png" alt class="img-fluid">
+                                <img src="assets/images/call/Calling-rafiki.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Multi line dialer
                             </h5>
@@ -426,7 +428,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Calling-bro (1).png" alt class="img-fluid">
+                                <img src="assets/images/call/Calling-bro (1).png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Calling
                             </h5>
@@ -440,7 +442,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Messages-amico.png" alt class="img-fluid">
+                                <img src="assets/images/call/Messages-amico.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>SMS
                             </h5>
@@ -455,7 +457,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Web search-rafiki.png" alt class="img-fluid">
+                                <img src="assets/images/call/Web search-rafiki.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>API AND WEBHOOKS
                             </h5>
@@ -470,7 +472,7 @@
                             <!-- <h3>MergeCall</h3>
                             <h4 class="text-dark">(Integrated Calling)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Forms-bro.png" alt class="img-fluid">
+                                <img src="assets/images/call/Forms-bro.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Custom Forms
                             </h5>
@@ -487,7 +489,7 @@
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Chat-rafiki (1).png" alt class="img-fluid">
+                                <img src="assets/images/call/Chat-rafiki (1).png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Bulk Texting
                             </h5>
@@ -503,7 +505,7 @@
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Ecommerce campaign-rafiki.png" alt class="img-fluid">
+                                <img src="assets/images/call/Ecommerce campaign-rafiki.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Campaign Management
                             </h5>
@@ -518,7 +520,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Call center-bro.png" alt class="img-fluid">
+                                <img src="assets/images/call/Call center-bro.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Lead Center
                             </h5>
@@ -534,7 +536,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Recording-bro.png" alt class="img-fluid">
+                                <img src="assets/images/call/Recording-bro.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Call Recording
                             </h5>
@@ -550,7 +552,7 @@
                             <!-- <h3>MergeCall</h3>
                             <h4 class="text-dark">(Integrated Calling)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Calling-rafiki.png" alt class="img-fluid">
+                                <img src="assets/images/call/Calling-rafiki.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Click To Call
                             </h5>
@@ -569,7 +571,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Pricing plans-rafiki.png" alt class="img-fluid">
+                                <img src="assets/images/call/Pricing plans-rafiki.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Cheapest
                             </h5>
@@ -584,7 +586,7 @@
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
-                                <img src="assets/images/call/Company-rafiki.png" alt class="img-fluid">
+                                <img src="assets/images/call/Company-rafiki.png" alt class="img-fluid" data-aos="zoom-in" data-aos-duration="1000">
                             </div>
                             <h5>Multiple Companies Management
                             </h5>
@@ -608,8 +610,8 @@
                         <h2 class="main-heading text-black mt-1">
                             MergCall FAQs
                         </h2>
-                        <div class="d-lg-none d-flex justify-content-center">
-                            <img src="assets/images/Questions-pana.png" alt class="img-fluid" style="max-width: 200px;">
+                        <div class="d-lg-none d-flex justify-content-center overflow-hidden">
+                            <img src="assets/images/Questions-pana.png" alt class="img-fluid"  style="max-width: 200px;">
                         </div>
 
                         <div class="faq-list p-0 mt-3 text-start">
@@ -709,7 +711,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 mx-auto d-lg-block d-none">
-                        <img src="assets/images/Questions-pana.png" alt class="img-fluid">
+                        <img src="assets/images/Questions-pana.png" alt class="img-fluid" data-aos="fade-left" data-aos-duration="1000">
                     </div>
                 </div>
             </div>
