--- a/mergsign.html
+++ b/mergsign.html
@@ -258,12 +258,16 @@
                 <div class="row align-items-center">
                     <div class="col-xl-6 col-lg-7  hero-text text-lg-start text-center">
 
-                        <h2 class="services-title">
-                            Sign documents <br class="d-lg-block d-none"> with MergSign
-                        </h2>
-                        <h1 class="mb-3 pb-0">
+                        <div class="overflow-hidden">
+                            <h2 class="services-title" data-aos="fade-up" data-aos-duration="1000">
+                                Sign documents <br class="d-lg-block d-none"> with MergSign
+                            </h2>
+                        </div>
+                      <div class="overflow-hidden">
+                        <h1 class="mb-3 pb-0" data-aos="fade-up" data-aos-duration="1500">
                             Fast, Simple, and Cost-Effective.
                         </h1>
+                      </div>
                         <p class="hero-text pe-lg-3 mt-2 mb-0 pb-0">
                             Make your business faster, simpler and more cost-efficient with MergSign.Agree with confidence, with intuitive signing experiences across virtually any device.
                         </p>
@@ -336,8 +340,8 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-6 me-lg-auto mx-lg-0 mx-auto">
-                        <div class="app-box-row d-flex justify-content-center">
-                            <img src="assets/images/ui-custom-branding.svg" alt="Choose deliery" class=" img-fluid rounded-3">
+                        <div class="app-box-row d-flex justify-content-center p-1">
+                            <img src="assets/images/Mergesign/Screenshot 2024-10-08 123244.png" alt="Choose deliery" class=" img-fluid rounded-3 shadow-sm" data-aos="fade-right" data-aos-duration="1000">
                         </div>
                     </div>
                     <div class="col-lg-5  hero-text  mx-auto mt-lg-0 mt-3 text-lg-start text-center">
@@ -413,8 +417,9 @@
                         </ul> -->
                     </div>
                     <div class="col-lg-6  ms-lg-auto mx-lg-0 mx-auto order-lg-2 order-1">
-                        <div class="app-box-row d-flex justify-content-center">
-                            <img src="assets/images/ui-workflow-idv.svg" alt="Choose deliery" class=" img-fluid rounded-3">
+                      
+                        <div class="app-box-row d-flex justify-content-center p-1">
+                            <img src="assets/images/Mergesign/Screenshot 2024-10-08 123452.png" alt="Choose deliery" class=" img-fluid rounded-3 " data-aos="fade-left" data-aos-duration="1000">
                         </div>
                     </div>
 
@@ -427,8 +432,9 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6  me-lg-auto mx-lg-0 mx-auto">
-                        <div class="app-box-row d-flex justify-content-center">
-                            <img src="assets/images/ui-custom-branding.svg" alt="Choose deliery" class=" img-fluid rounded-3">
+                      
+                        <div class="app-box-row d-flex justify-content-center p-1">
+                            <img src="assets/images/Mergesign/Screenshot 2024-10-08 123610.png" alt="Choose deliery" class=" img-fluid rounded-3 shadow-sm" data-aos="fade-right" data-aos-duration="1000">
                         </div>
                     </div>
                     <div class="col-lg-5   hero-text  mx-auto mt-lg-0 mt-3 text-lg-start text-center order-lg-1 order-2">
@@ -557,7 +563,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 mx-auto d-lg-block d-none">
-                        <img src="assets/images/Questions-pana.png" alt="" class="img-fluid">
+                        <img src="assets/images/Questions-pana.png" alt="" class="img-fluid"  data-aos="fade-left" data-aos-duration="1000">
                     </div>
                 </div>
             </div>
